# experience-tracker-discord-bot

./: Cargo.toml  Dockerfile  README.md
.aws/: task-definition.json
.github/workflows/: aws.yml
src/: main.rs
src/commands/: mod.rs  racn.rs  skulls.rs  timer.rs  xd.rs
src/misc/: mod.rs  vc_icon.rs
src/xp/: mod.rs  xp.rs
src/xp/xp_commands/: leaderboard.rs  mod.rs  rank.rs  xp_blacklist.rs  xp_info.rs  xp_modify.rs  xp_multiplier.rs  xp_set_level.rs
